# xfgapi

./: .gitignore  README.md
clients/csharp/: Org.OpenAPITools.sln
clients/csharp/.openapi-generator/: FILES
clients/csharp/api/: openapi.yaml
clients/go/: README.md  api_default.go  client.go  configuration.go  model__wallet_transfer_post_request.go  model__wallet_transfer_post_request_destinations_inner.go  model__wallet_transfer_post_request_messages_inner.go  response.go  utils.go
clients/go/.openapi-generator/: FILES
clients/go/api/: openapi.yaml
clients/go/test/: api_default_test.go
clients/java/: README.md
clients/java/.openapi-generator/: FILES
clients/java/api/: openapi.yaml
clients/javascript/: index.js
clients/kotlin/: README.md
clients/kotlin/.openapi-generator/: FILES
clients/php/: README.md  composer.json
clients/php/.openapi-generator/: FILES
clients/php/lib/: ApiException.php  Configuration.php  FormDataProcessor.php  HeaderSelector.php  ObjectSerializer.php
clients/python/: fuego_api.py
clients/ruby/: README.md  openapi_client.gemspec
clients/ruby/.openapi-generator/: FILES
clients/ruby/lib/: openapi_client.rb
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/swift5/: README.md
docs/: UBUNTU-DEPLOYMENT.md
explorer-integration/: README.md  migration-script.js
gateway/: package-lock.json  package.json  server-privacy.js  server.js
openapi/: fuego-openapi.yaml  generate_sdks.sh
privacy-security/: privacy-analysis.md
scripts/: generate_sdks.sh  ubuntu-setup.sh
(+88 files in other folders)
