[package]
name = "fuego_api"
version = "0.1.0"
authors = ["Fuego Developers"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Rust client for the Fuego API Gateway (REST over Core/Wallet RPC)"
repository = "https://example.com/fuego"

[lib]
name = "fuego_api"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
